--- a/style.css
+++ b/style.css
@@ -1,1 +1,99 @@
 
+/* body styles */
+body {
+    /* font-family: 'Charmonman', cursive; */
+    font-family: "Asap", sans-serif;
+    font-size: 16px / 1em;
+    line-height: 1.5;
+    color: rgb(4, 104, 101);
+}
+
+
+h1 {
+    font-size : 2.5rem;
+    text-align : center;
+}
+  
+  
+  main {
+    padding: 20px;
+    box-sizing: border-box;
+    max-width: 1200px;
+  }
+
+
+  /* form */
+  form {
+    background-color: rgb(255, 252, 250);
+    margin: 1rem 0 2rem;
+    padding: 1.5rem;
+    box-sizing: border-box;
+    border-radius: 0.75rem;
+    background: rgba(4, 104, 101, 0.2);
+    border : 3px solid rgba(4, 104, 101, 1);
+  }
+  form input,
+  form label {
+    display: block;
+  }
+  form label {
+    color: rgb(255, 252, 250);
+    padding-bottom: 0.25rem;
+  }
+  form input {
+    font-family: "Asap", sans-serif;
+    font-size: 1.5rem;
+    border: 0;
+    padding: 0.5rem;
+    border-radius: 0.25rem;
+    font-size: 1rem;
+    width: 100%;
+    display: block;
+    box-sizing: border-box;
+    border : 1px solid rgba(4, 104, 101, 1);
+  }
+  form input[type="text"]:focus {
+    border: 1px solid rgb(255, 155, 113);
+  }
+
+
+
+  form input[type="submit"] {
+    margin-top: 4rem;
+    padding: 1rem;
+    font-size: 1.25rem;
+    background: rgba(4, 104, 101, 0.8);
+    color: rgb(255, 252, 250);
+    border: 0;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    transition: background-color ease-in-out 0.3s;
+  }
+
+  form input[type="submit"]:hover,
+  form input[type="submit"]:focus {
+    background: rgb(255, 155, 113);
+  }
+  
+
+  
+  a {
+    text-decoration: none;
+    font-family: "Asap", sans-serif;
+    color: rgb(4, 104, 101);
+    margin: 8px;
+  }
+  
+  /* mid to large screen stuff */
+  @media only screen and (min-width: 600px) {
+
+    section,
+    #todo-container,
+    form {
+      max-width: 80%;
+      margin: 0 auto 2rem;
+    }
+  }
+  
+
+  
